--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
             <version>1.18.32</version>
             <scope>provided</scope>
         </dependency>
+        <!-- SQLite JDBC 드라이버 -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.45.3.0</version>
+        </dependency>
     </dependencies>
 
 </project>
